--- a/module5.html
+++ b/module5.html
@@ -20,9 +20,9 @@
           </a>
 
           <div class="navbar-brand">
-            <a href="index.html"><h1>MK's Restaurant</h1></a>
+            <a href="https://monalikamble.github.io/module5.html"><h1>MK's Restaurant</h1></a>
             <p>
-              <img src="images/star-k-logo.png" alt="Kosher certification">
+              <img src="images/star-k-logo.png" alt="Monali Kamble">
               <span>Monali Kamble</span>
             </p>
           </div>
